+feat: add account and switch functionality + refactored code